@@ -1,0 +1,5 @@
+[Desktop Entry]
+Encoding=UTF-8
+X-KDE-Library=libkiviotargettool
+Name=Target Tool for Kivio
+Type=Service
