@@ -57,3 +57,4 @@ Kivio 1.3.x -> 1.4
 - Added Nassi Schneiderman stencils.
 - Moving selected stencils with the keyboard.
 - Added a docker for adding stencils to the document.
+- Added a tool for adding connector targets to stencils.
